--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "express-mysql-session": "^2.1.0",
     "express-session": "^1.17.0",
     "express-validator": "^6.3.1",
+    "html-pdf": "^2.2.0",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.11.0",
+    "puppeteer": "^3.3.0",
+    "random": "^2.2.0",
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
