--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
-    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-mysql-session": "^2.1.0",
@@ -18,8 +17,7 @@
     "mysql": "^2.17.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "random": "^2.2.0",
-    "timeago.js": "^4.0.2"
+    "random": "^2.2.0"
   },
   "devDependencies": {
     "http": "0.0.1-security",
